--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,26 +20,16 @@ nav:
     - Cahier de texte : index.md
     - Environnement :
       - GitHub+GitPod : github.md
+      - Les notebook jupyter :
+        - Découverte : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/decouverte-notebook.ipynb
+        - Markdown : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/MarkDown-Le_BN_pour_rapporter.ipynb
+        - HTML : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/HTML-Le_BN_pour_multimedier.ipynb
+        - LaTeX : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/LaTeX-Le_BN_pour_formuler.ipynb
+        - Calcul : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/Arithmetique-Le_BN_pour_calculer.ipynb
     - Présentation SI : http://si.lycee.ecmorlaix.fr/
     - 1SI_2021-2022 : https://ericecmorlaix.github.io/1SI_2021-2022/
     - TSI-NSI_2022-2023 : https://ericecmorlaix.github.io/TSI-NSI_2022-2023/
-    # - Les notebook jupyter :
-    #   - Découverte : https://nbviewer.org/github/ericECmorlaix/1SI_2021-2022/blob/main/docs/decouverte-notebook.ipynb
-    #   - Markdown : https://nbviewer.org/github/ericECmorlaix/1SI_2021-2022/blob/main/docs/MarkDown-Le_BN_pour_rapporter.ipynb
-    #   - HTML : https://nbviewer.org/github/ericECmorlaix/1SI_2021-2022/blob/main/docs/HTML-Le_BN_pour_multimedier.ipynb
-    #   - LaTeX : https://nbviewer.org/github/ericECmorlaix/1SI_2021-2022/blob/main/docs/LaTeX-Le_BN_pour_formuler.ipynb
-    #   - Calcul : https://nbviewer.org/github/ericECmorlaix/1SI_2021-2022/blob/main/docs/Arithmetique-Le_BN_pour_calculer.ipynb
-    # - Analyse Fonctionnelle :
-    #   - Externe : https://nbviewer.org/github/ericECmorlaix/1SI_2021-2022/blob/main/docs/OutilsAnalyseFonctionnelleExterne.ipynb
-    #   - Interne : https://nbviewer.org/github/ericECmorlaix/1SI_2021-2022/blob/main/docs/OutilsAnalyseFonctionnelleInterne.ipynb
-    # - Chaine d'information :
-    #   - Numération : https://nbviewer.org/github/ericECmorlaix/1SI_2021-2022/blob/main/docs/ChaineInformation-Numeration.ipynb
-    #   - Logiques : https://nbviewer.org/github/ericECmorlaix/1SI_2021-2022/blob/main/docs/FonctionsLogiquesV1.ipynb
-    # - Projet :
-    #   - Modeliser_ma_rue.md
-    
-    
-    
+      
 
 # Définition du thème https://squidfunk.github.io/mkdocs-material/creating-your-site/
 theme:
