--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,12 +20,12 @@ nav:
     - Cahier de texte : index.md
     - Environnement :
       - GitHub+GitPod : github.md
-      - Les notebook jupyter :
-        - Découverte : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/decouverte-notebook.ipynb
-        - Markdown : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/MarkDown-Le_BN_pour_rapporter.ipynb
-        - HTML : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/HTML-Le_BN_pour_multimedier.ipynb
-        - LaTeX : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/LaTeX-Le_BN_pour_formuler.ipynb
-        - Calcul : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/Arithmetique-Le_BN_pour_calculer.ipynb
+      - Les notebook jupyter : notebook.md
+        # - Découverte : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/decouverte-notebook.ipynb
+        # - Markdown : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/MarkDown-Le_BN_pour_rapporter.ipynb
+        # - HTML : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/HTML-Le_BN_pour_multimedier.ipynb
+        # - LaTeX : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/LaTeX-Le_BN_pour_formuler.ipynb
+        # - Calcul : https://nbviewer.org/urls/ericecmorlaix.github.io/bn/Arithmetique-Le_BN_pour_calculer.ipynb
     - Présentation SI : http://si.lycee.ecmorlaix.fr/
     - 1SI_2021-2022 : https://ericecmorlaix.github.io/1SI_2021-2022/
     - TSI-NSI_2022-2023 : https://ericecmorlaix.github.io/TSI-NSI_2022-2023/
